--- a/clicky-game/src/components/Container/Container.css
+++ b/clicky-game/src/components/Container/Container.css
@@ -7,7 +7,7 @@
   padding-bottom: 50px;
   width: 90%;
   margin: 0 auto;
-  background-color: aqua;
+  background-color: rgb(252, 32, 32);
   
 }
 @media (min-width: 1100px) {
