--- a/clicky-game/src/components/Header/Header.css
+++ b/clicky-game/src/components/Header/Header.css
@@ -1,12 +1,14 @@
 .header {
-  background-color: rgb(255, 255, 255);
-  background-image: url("/assets/images/geometry.svg");
+  background-color: rgb(17, 12, 12);
+  background-image: url("/assets/images/stan.jpg");
   background-repeat: repeat;
-  color: rgb(231, 0, 0);
+  color: rgb(235, 35, 35);
   min-height: 400px;
   padding: 180px 20px; 
   padding-bottom: 140px;
   text-align: center;
+  
+  
 }
 
 .header h1 {
